Fix spacing beetwen children and parent container

--- a/css/responsiveLayout.css
+++ b/css/responsiveLayout.css
@@ -1,24 +1,24 @@
 body {
     display: flex;
-    background-color: darkgrey;
+    align-items: center;
+    justify-content: space-around;
+    align-content: space-around;
     margin: 0;
-
+    background-color: darkgrey;
 }
 
 .parentElem {
     display: flex;
-    max-width: 1500px;
-    margin: auto;
-    justify-content: space-evenly;
-    align-items: center;
-    align-content: space-evenly;
     flex-flow: row wrap;
+    max-width: 1500px;
+    padding: 8px;
     background-color: burlywood;
 }
 
 .parentElem > .childElem {
     flex: 1 300px;
-    margin: 16px;
+    min-width: 300px;
+    margin: 8px;
     padding: 5px;
 }
 
